# containeer-optuna

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  README.md  TODO.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements-notebooks.txt  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/config/: index.html
api/containeer_optuna/: index.html
api/data/: index.html
api/dl/: index.html
api/evaluation/: index.html
api/models/: index.html
api/optimization/: index.html
api/pipelines/: index.html
api/statistics/: index.html
api/utils/: index.html
config/: datasets.yaml  models.yaml
config/experiments/: agnews_transformer_classification.yaml  auto_mpg_feature_set_selection.yaml  auto_mpg_model_selection.yaml  breast_cancer_classification.yaml  breast_cancer_mlp_classification.yaml  classification_model_selection.yaml  clustering_hdbscan.yaml  clustering_model_selection.yaml  clustering_optimization.yaml  clustering_truncated_svd.yaml  diabetes_feature_set_selection.yaml  diabetes_mlp_regression.yaml  diabetes_regression.yaml  mnist_cnn_classification.yaml  mnist_rnn_classification.yaml
contributing/: index.html
docs/: contributing.md  index.md  roadmap.md
docs/api/: config.md  containeer_optuna.md  data.md  dl.md  evaluation.md  models.md  optimization.md  pipelines.md  statistics.md  utils.md
docs/getting_started/: configuration.md  installation.md  quickstart.md
docs/model_cards/: classification.md  clustering.md  index.md  reducers.md  regression.md  scalers.md
docs/tutorials/: classification_tutorial.md  clustering_model_selection.md  clustering_pipeline.md  deep_learning_tutorial.md  dimensionality_reduction.md  feature_set_selection.md  levels_of_maturity.md  model_selection.md  nlp_tutorial.md  regression_tutorial.md  statistics_tutorial.md
docs/user_guide/: cli_reference.md  config_reference.md  datasets.md  evaluation.md  models.md  optimization.md  pipelines.md  production.md  statistics.md
getting_started/configuration/: index.html
getting_started/installation/: index.html
getting_started/quickstart/: index.html
model_cards/: index.html
model_cards/classification/: index.html
model_cards/clustering/: index.html
model_cards/reducers/: index.html
model_cards/regression/: index.html
model_cards/scalers/: index.html
notebooks/customer_personality_analysis/: model.ipynb
notebooks/demos/: 01_regression_diabetes.ipynb  02_classification_breast_cancer.ipynb  03_statistics_eda.ipynb  04_kaggle_customer_personality.ipynb
notebooks/optuna/: kaggle_dataset.ipynb  perplexity.ipynb
roadmap/: index.html
scripts/: customer_personality_model.py  hyperparam_tuning_levels_of_maturity.py  kaggle_dataset.py  more_advanced_workflow.py  perplexity.py
search/: search_index.json
src/containeer_optuna/: __init__.py  __main__.py  config.py
src/containeer_optuna/cli/: __init__.py  cli.py
src/containeer_optuna/data/: __init__.py  datasets.py
src/containeer_optuna/evaluation/: __init__.py  metrics.py  model_cards.py  plotting.py
src/containeer_optuna/models/: __init__.py  classes.py  registry.py
src/containeer_optuna/models/dl/: __init__.py  backends.py  cnn.py  embeddings.py  mlp.py  rnn.py  transformer.py
src/containeer_optuna/optimization/: __init__.py  runner.py
src/containeer_optuna/optimization/objectives/: __init__.py  factories.py  nlp.py
src/containeer_optuna/pipelines/: __init__.py  pipelines.py
src/containeer_optuna/statistics/: __init__.py  categorical.py  correlation.py  descriptive.py  hypothesis.py  normality.py  types.py
src/containeer_optuna/utils/: __init__.py  utils.py
tests/: conftest.py  test_cli.py  test_config.py  test_data.py  test_dl.py  test_evaluation.py  test_models.py  test_nlp.py  test_optimization.py  test_pipelines.py  test_production.py  test_statistics.py
tutorials/classification_tutorial/: index.html
tutorials/clustering_model_selection/: index.html
tutorials/clustering_pipeline/: index.html
tutorials/deep_learning_tutorial/: index.html
tutorials/dimensionality_reduction/: index.html
tutorials/feature_set_selection/: index.html
tutorials/levels_of_maturity/: index.html
tutorials/model_selection/: index.html
tutorials/nlp_tutorial/: index.html
tutorials/regression_tutorial/: index.html
tutorials/statistics_tutorial/: index.html
user_guide/cli_reference/: index.html
user_guide/config_reference/: index.html
user_guide/datasets/: index.html
user_guide/evaluation/: index.html
user_guide/models/: index.html
user_guide/optimization/: index.html
user_guide/pipelines/: index.html
user_guide/production/: index.html
user_guide/statistics/: index.html
