[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "containeer-optuna"
version = "0.1.0"
description = "Optuna hyperparameter optimization experiments with modular pipelines"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Carlos Gomez", email = "cgomezfandino@example.com"}
]
keywords = ["optuna", "hyperparameter-optimization", "machine-learning", "clustering", "regression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "optuna>=4.5.0",
    "optuna-dashboard>=0.2.3",
    "scikit-learn>=1.2.2",
    "pandas>=2.0.3",
    "numpy>=1.24.4",
    "scipy>=1.13.1",
    "joblib>=1.5.1",
    "pyyaml>=6.0.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "kagglehub>=0.3.0",
    "umap-learn>=0.5.3",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=6.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.23.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.0",
]

[project.scripts]
containeer-optuna = "containeer_optuna.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["containeer_optuna*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "T20"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

# mkdocs configuration lives in mkdocs.yml at the repo root (mkdocs does not
# read pyproject.toml). See mkdocs.yml for theme, plugins, and nav.